# eggEngine

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/CMake/: CompileShaders.cmake  FindGLFW3.cmake
Engine/Resources/Shaders/: Shader.vert
Engine/Sources/Algorithms/Sorting/: StandardSorting.h
Engine/Sources/Config/: Config.h
Engine/Sources/Constants/: Memory.h  Window.h
Engine/Sources/Containers/: Container.h  IterableAdaptor.h  PointerImitator.h  Sorting.h
Engine/Sources/Containers/CompressedPair/: CompressedBase.h  CompressedPair.h  CompressedPairElement.h
Engine/Sources/Containers/CompressedPair/Internal/: CompressedPairElement.h
Engine/Sources/Containers/DenseMap/: DenseMap.h  DenseMapIterator.h  DenseMapLocalIterator.h  DenseMapNode.h
Engine/Sources/Containers/DenseMap/Internal/: DenseMapIterator.h  DenseMapLocalIterator.h  DenseMapNode.h
Engine/Sources/Containers/PagedVector/: PagedVector.h
Engine/Sources/ECS/: Entity.h  Ownership.h  Recycler.h  Registry.h
Engine/Sources/ECS/Containers/: Container.h  Lifecycle.h  LifecycleContainer.h
Engine/Sources/ECS/Containers/Group/: Group.h  PoolGroup.h
Engine/Sources/ECS/Containers/Group/Internal/: GroupIterator.h  GroupViewer.h  PoolTraits.h
Engine/Sources/ECS/Containers/Lifecycle/: Lifecycle.h
Engine/Sources/ECS/Containers/PagedVector/: PagedVector.h  PagedVectorIterator.h
Engine/Sources/ECS/Containers/PagedVector/Internal/: PagedVectorIterator.h
Engine/Sources/ECS/Containers/PoolGroup/: PoolGroup.h  PoolGroupInterface.h
Engine/Sources/ECS/Containers/PoolGroup/Internal/: PoolGroupViewer.h
Engine/Sources/ECS/Containers/Registry/: Registry.h
Engine/Sources/ECS/Containers/SparseSet/: SparseSet.h  SparseSetIterator.h
Engine/Sources/ECS/Containers/SparseSet/Internal/: SparseSetIterator.h
Engine/Sources/ECS/Containers/Storage/: Storage.h  StorageIterator.h
Engine/Sources/ECS/Containers/Storage/Internal/: StorageIterator.h
Engine/Sources/ECS/Containers/Traits/: PoolTraits.h
Engine/Sources/ECS/Systems/: System.h
Engine/Sources/ECS/Systems/Renderer/: Renderer.cpp  Renderer.h
Engine/Sources/ECS/Traits/: BasicEntityTraits.h  ComponentTraits.h  EntityTraits.h  PageSizeTraits.h
Engine/Sources/Engine/: Engine.cpp  Engine.h
Engine/Sources/Events/: Action.h  Connection.h  ConnectionArgument.h  Delegate.h  Dispatcher.h  Dispatcher_Deprecated.h  EventLoop.h  EventLoopInterface.h  Signal.h  Sink.h
Engine/Sources/Events/Delegate/: Action.h  Delegate.h
Engine/Sources/Events/EventLoop/: EventLoop.h
Engine/Sources/Events/Signal/: Signal.h  Sink.h
Engine/Sources/Events/Traits/: FunctionPointerTraits.h  FunctionTraits.h  FunctorOverloadTraits.h  InvocablePointerTraits.h
Engine/Sources/Events/Traits/Internal/: FunctionPointerTraits.h  FunctorOverloadTraits.h
Engine/Sources/Events/Types/WindowCreated/: WindowCreated.cpp  WindowCreated.h
Engine/Sources/Events/Types/WindowEvent/: WindowEvent.cpp  WindowEvent.h
Engine/Sources/GUI/Window/: Window.cpp  Window.h
Engine/Sources/Hash/: DataHash.h  Hash.h  HashString.h  Literals.h
Engine/Sources/Hash/Internal/Traits/: FNV1aTraits.h  Murmur2Traits.h
Engine/Sources/Hash/Traits/: FNV1aTraits.h  Murmur2Traits.h
Engine/Sources/Math/: Math.cpp  Math.h
Engine/Sources/Math/Traits/: Capabilities.h
Engine/Sources/Memory/: Constants.h  Deleter.h  Utils.h
Engine/Sources/Scene/: Scene.cpp  Scene.h
Engine/Sources/Type/: TypeID.h  TypeInfo.h
Engine/Sources/Type/Internal/: TypeIndex.h
Engine/Sources/Type/Traits/: Capabilities.h  Deduction.h
Engine/Sources/Type/Traits/Internal/: ContainedIn.h  HasType.h
Engine/Sources/TypeInfo/: IDType.h  Internal.h  TypeHash.h  TypeID.h  TypeIndex.h  TypeInfo.h  TypeName.h
Engine/Sources/TypeInfo/Internal/: FunctionName.h  FunctionNameUtils.h
Engine/Sources/Types/: Constness.h  TypeInfo.h  Types.h
Engine/Sources/Types/Capabilities/: Capabilities.h
Engine/Sources/Types/Capabilities/Internal/: IsAllOf.h  IsAllSame.h  IsAllUnique.h  IsAnyOf.h  IsApplicable.h  IsContainedIn.h  IsInstanceOf.h  IsNoneOf.h  IsPredicateTrait.h  IsUniqueIn.h
Engine/Sources/Types/Deduction/: Deduction.h
Engine/Sources/Types/Deduction/Internal/: CombineTuples.h  CommonTypeOf.h  FilterTuple.h  InstantiateTuple.h  MemberObjectPointerTraits.h  RemoveTupleIndex.h  RemoveTupleType.h  TupleSize.h  TypeIndexIn.h
Engine/Sources/Types/Internal/: FunctionNameUtils.h
Engine/Sources/Types/Traits/: Capabilities.h  Constness.h
Engine/Sources/Types/Traits/Internal/: IsInstanceOf.h
Engine/Sources/Types/TypeInfo/: TypeInfo.h
Engine/Sources/Types/TypeInfo/Internal/: TypeNameUtils.h
Engine/Sources/Utils/: Memory.h
Engine/Tests/: CMakeLists.txt  CommonFunctions.h  DenseMap.cpp  Single.cpp  Single.h  SparseSet.cpp  Storage.cpp  WindowCreating.cpp
Engine/Tests/Containers/: DenseMap.cpp
Engine/Tests/ECS/Containers/: SparseSet.cpp  Storage.cpp
Engine/Tests/Events/: Delegate.cpp
Engine/Tests/Events/Delegate/: Delegate.cpp
Engine/Tests/Include/Single/: Single.cpp  Single.h
Game/: CMakeLists.txt
Game/Sources/: main.cpp
